# web-transport-quinn-py

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/web_transport/: __init__.py  _crypto.py  _web_transport.pyi
src/: errors.rs  recv_stream.rs  send_stream.rs  server.rs  session.rs
tests/: test_cert.py  test_datagrams.py  test_echo.py  test_streams.py
tests/browser_interop/: conftest.py  test_bidi_streams.py  test_concurrency.py  test_connection.py  test_datagrams.py  test_error_propagation.py  test_session_request.py  test_stream_edge_cases.py  test_streams.py  test_uni_streams.py
tests/integration/: conftest.py  test_client.py  test_datagrams.py  test_server.py  test_session_lifecycle.py  test_stream_reset.py  test_streams.py
