[package]
name = "web-transport-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_web_transport"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-util = "0.7"
bytes = "1"
rustls-native-certs = "0.8"
rustls-pki-types = "1"
url = "2"
http = "1"
