[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "web-transport"
version = "0.1.0"
description = "Python bindings for web-transport-quinn"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["cryptography>=43.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
python-source = "python"
module-name = "web_transport._web_transport"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]
