[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "web-transport-quinn"
version = "0.1.0"
description = "Python bindings for web-transport-quinn"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ai-and-i", email = "ai.and.i.project@gmail.com" }]
keywords = ["webtransport", "quic", "asyncio", "networking"]
dependencies = ["cryptography>=43.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ai-and-i/web-transport-quinn-py"
Repository = "https://github.com/ai-and-i/web-transport-quinn-py"
Issues = "https://github.com/ai-and-i/web-transport-quinn-py/issues"

[tool.maturin]
python-source = "python"
module-name = "web_transport._web_transport"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "playwright>=1.40",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]
